# gqp

./: CMakeLists.txt  GatorQue.md  ProjectHome.md  TutorialCodeBlocks.md  TutorialVisualStudio.md  changes.txt  license.txt  readme.txt  using.txt
cmake/: Actions.cmake  Config.cmake  Functions.cmake  Macros.cmake  Options.cmake  Scripts.cmake
cmake/Modules/: ExternalProject.cmake  FindMercurial.cmake
projects/: CMakeLists.txt
projects/Example/: CMakeLists.txt  Options.cmake  README
projects/Example/src/: GameState.cpp  GameState.hpp  TicTacToeApp.cpp  TicTacToeApp.hpp  main.cpp
projects/TicTacToe/: CMakeLists.txt  Options.cmake
projects/TicTacToe/doc/: Doxyfile.in
projects/TicTacToe/src/: GameState.cpp
projects/_Rename_Skeleton_/: CMakeLists.txt  Options.cmake
projects/_Rename_Skeleton_/doc/: CMakeLists.txt
projects/_Rename_Skeleton_/resources/: settings.cfg
